# whitespace

./: .gitignore  .trivyignore  README.md  main.py  model_registry.yaml  pyproject.toml
.github/workflows/: ci.yml
deploy/aws/: Dockerfile  build_lambdas.sh
deploy/aws/terraform/: backend.tf  main.tf  outputs.tf  variables.tf  versions.tf
deploy/byok/: .env.example  Dockerfile  docker-compose.yml
frontend/: eslint.config.mjs  package-lock.json  package.json  proxy.ts  tsconfig.tsbuildinfo  types.ts
frontend/animations/: useDecoGraphAnimation.ts  useGraphAnimation.ts  useHeadLightbulbAnimation.ts  useHeroAnimation.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/auth/: SaasGate.tsx
frontend/components/credentials/: AuraFileParser.ts  ByokForm.tsx
frontend/components/gaps/: GapResults.tsx  NeedCard.tsx
frontend/components/ideation/: IdeationResults.tsx  ProposalCard.tsx
frontend/components/jobs/: JobProgress.tsx
frontend/components/layout/: AppShell.tsx  Hero.tsx  Nav.tsx
frontend/components/onboarding/: ModeToggle.tsx  Onboarding.tsx
frontend/components/search/: SearchPanel.tsx
frontend/components/shared/: GraphDecoration.tsx  HeadLightbulb.tsx
frontend/components/upload/: DropZone.tsx  Workspace.tsx
frontend/context/: CredentialsContext.tsx
frontend/lib/: api.ts
frontend/styles/: tokens.css
src/whitespace/: config.py  domain.py  playbook.py
src/whitespace/agents/: _context_helpers.py  _graph_actions.py  _orchestrator_actions.py  _orchestrator_session.py  _orchestrator_tool_defs.py  _tool_loop.py  context_agent.py  generator_agent.py  graph_agent.py  (+4 more)
tests/: test_cost_tracker.py  test_council_critique.py  test_dynamo_items.py  test_gap_citations.py  test_hybrid_gap_memory.py  test_model_router.py  test_normaliser.py  test_orchestrator_byok_wiring.py  test_provider_translation.py  test_runs_reader.py  test_saas_orchestrator.py  test_score_against.py  test_store_domain.py  test_tool_loop.py  test_trail_rendering.py  test_usage_enforcement.py  test_web_search.py
(+142 files in other folders)
